# python-mcp-playground

./: .gitignore  README.md  client.py  pyproject.toml  server.py
Flashpost-tests/: flashpost.db  flashpostCollections.db  flashpostCookies.db  flashpostHistory.db  flashpostUserPreference.db  flashpostVariable.db
