[project]
name = "python-mcp-playground"
version = "0.1.0"
description = "Demonstração de MCP Streamable HTTP + SSE com client e servidor em Python."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["client", "server"]

[project.scripts]
mcp-server = "server:main"
mcp-client = "client:main"
